# DataAnt

./: .env.example  .gitignore  AGENTS.md  README.md  SPEC.md  pyproject.toml
.github/workflows/: core-offline.yml
app/: browser_session.py  diagnostics.py  excel_store.py  input_loader.py  main.py  matcher.py  models.py  product_artifact_writers.py  product_bundle_transaction.py  product_bundle_verifier.py  product_excel.py  product_gallery.py  product_json.py  product_models.py  product_output_bundle.py  product_output_snapshot.py  product_runner.py  runner.py  site_errors.py
app/sites/: douban_movie.py  web_scraping_dev.py
inputs/: queries.controlled.csv  queries.example.csv
scripts/: benchmark_products.py  browser_smoke.py  prune_artifacts.py  verify_core.py  verify_products.py
tests/: helpers_product_performance.py  test_benchmark_products.py  test_browser_session.py  test_browser_smoke_script.py  test_douban_parser.py  test_excel_store.py  test_input_loader.py  test_main.py  test_matcher.py  test_models.py  test_product_artifact_writers.py  test_product_bundle_transaction.py  test_product_bundle_verifier.py  test_product_excel.py  test_product_gallery.py  test_product_json.py  test_product_models.py  test_product_output_bundle.py  test_product_output_snapshot.py  test_product_runner.py  test_project_config.py  test_prune_artifacts.py  test_runner.py  test_verify_core.py  test_verify_products.py  test_web_scraping_dev.py
tests/fixtures/: blocked.html  challenge.html  detail_movie.html  search_empty.html  search_results.html  search_results_live_shape.html  (+7 more)
(+46 files in other folders)
