[build-system]
requires = ["setuptools>=75"]
build-backend = "setuptools.build_meta"

[project]
name = "browser-bot-demo"
version = "0.1.0"
requires-python = ">=3.11,<3.13"
dependencies = ["DrissionPage>=4.1.1,<4.2", "openpyxl>=3.1,<4"]

[project.optional-dependencies]
dev = ["pytest>=8,<9", "pytest-cov>=5,<7"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-ra"

[tool.setuptools]
packages = ["app", "app.sites"]
